ping-pong-app/manifests/services.yaml
# https://kubernetes.io/docs/concepts/services-networking/service/
apiVersion: v1
kind: Service
metadata:
  name: ping-pong-svc
  namespace: default
spec:
  selector:
    app: ping-pong
  type: ClusterIP
  ports:
    - protocol: TCP
      port: 2555
      targetPort: 3000
---
